(library
 (name zarith_stubs_js)
 (public_name zarith_stubs_js)
 (js_of_ocaml
  (javascript_files ./runtime.js)
  (flags --no-sourcemap))
 (libraries)
 (preprocess no_preprocessing)
 (wasm_of_ocaml
  (javascript_files ./runtime.js)
  (wasm_files runtime_wasm.js runtime.wat)
  (flags --no-sourcemap)))
